# jane/Client.php
@@ -41,6 +41,23 @@ class Client extends \Jane\OpenApiRuntime\Client\Psr18Client
      *
      *     @var string $operator
      *     @var string $language de, en
+     *     @var string $type smartupgrade, socialproof_box, socialproof_bubble, countdown, trust_badge
+     * }
+     *
+     * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
+     *
+     * @return \Heptacom\DigiStore24\Model\ListConversionToolsResponse|\Heptacom\DigiStore24\Model\ErrorResponse|\Psr\Http\Message\ResponseInterface|null
+     */
+    public function listConversionTools(string $apiToken, array $queryParameters = [], string $fetch = self::FETCH_OBJECT)
+    {
+        return $this->executePsr7Endpoint(new \Heptacom\DigiStore24\Endpoint\ListConversionTools($apiToken, $queryParameters), $fetch);
+    }
+
+    /**
+     * @param array $queryParameters {
+     *
+     *     @var string $operator
+     *     @var string $language de, en
      * }
      *
      * @param string $fetch Fetch mode to use (can be OBJECT or RESPONSE)
